[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ekgds"
version = "0.1.0"
description = "PyTorch datasets and tooling for public open-source EKG datasets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "wfdb",        # Crucial for PhysioNet data
    "scipy",       # Often needed for resampling/filtering
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]
